--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Task force Challenge",
   "main": "index.js",
-  
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/index.js",
     "build": "babel index.js — out-file index-compiled.js",
@@ -26,7 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "joi": "^17.4.2",
+    "joi": "13.1.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
