--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "joi": "13.1.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
