--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/index.js",
+    "test": "npm run migrate &&  nyc --reporter=html --reporter=text mocha --require @babel/register --timeout 3000 ./src/test/main.test.js --exit",
     "build": "babel index.js — out-file index-compiled.js",
     "db-migrate": "npx sequelize db:migrate",
     "demigrate": "npx sequelize-cli db:migrate:undo:all",
@@ -39,5 +40,19 @@
     "sequelize-cli": "^6.2.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.1.1",
+    "mocha": "^9.1.3",
+    "mocha-lcov-reporter": "^1.3.0",
+    "mock-req-res": "^1.2.0",
+    "node-mocks-http": "^1.11.0",
+    "nyc": "^15.1.0",
+    "should": "^13.2.3",
+    "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
+    "sinon-express-mock": "^2.2.1"
   }
 }
