--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./src/index.js",
-    "test": "npm run migrate &&  nyc --reporter=html --reporter=text mocha --require @babel/register --timeout 3000 ./src/test/main.test.js --exit",
+    "test": "npm run migrate &&  nyc --reporter=html --reporter=text mocha --require @babel/register --timeout 3000 ./src/tests/main.test.js --exit",
     "build": "babel index.js — out-file index-compiled.js",
     "db-migrate": "npx sequelize db:migrate",
     "demigrate": "npx sequelize-cli db:migrate:undo:all",
